# adventofcode

./: LICENSE  README.md
2021/: .gitignore  Cargo.toml  README.md
2021/day10_1/src/: lib.rs
2021/day10_2/: Cargo.toml
2021/day10_2/src/: lib.rs
2021/day11_1/src/: lib.rs
2021/day11_2/: Cargo.toml
2021/day11_2/src/: lib.rs
2021/day12_1/src/: graph.rs  lib.rs
2021/day12_2/: Cargo.toml
2021/day12_2/src/: graph.rs  lib.rs
2021/day13_1/src/: lib.rs
2021/day14_1/: Cargo.toml
2021/day14_1/src/: lib.rs
2021/day14_2/: Cargo.toml
2021/day14_2/src/: lib.rs
2021/day15_1/: Cargo.toml
2021/day15_1/src/: graph.rs  lib.rs
2021/day15_2/: Cargo.toml
2021/day15_2/src/: lib.rs
2021/day16_1/: Cargo.toml
2021/day16_1/src/: lib.rs  packet.rs
2021/day17_1/: Cargo.toml
2021/day17_1/src/: lib.rs
2021/day18_1/: Cargo.toml
2021/day18_1/src/: lib.rs  sfish_math.rs
2021/day18_2/: Cargo.toml
2021/day18_2/src/: lib.rs
2021/day19_1/: Cargo.toml
2021/day19_1/src/: lib.rs  probe.rs  rotations.rs  space.rs
2021/day1_1/src/: lib.rs
2021/day1_2/src/: lib.rs
2021/day20_1/: Cargo.toml
2021/day20_1/src/: lib.rs
2021/day21_1/: Cargo.toml
2021/day21_1/src/: lib.rs
2021/day21_2/: Cargo.toml
2021/day21_2/src/: lib.rs
2021/day22_1/: Cargo.toml
2021/day22_1/src/: lib.rs  space.rs
2021/day23_2/: Cargo.toml
2021/day23_2/src/: burrow.rs  lib.rs  path.rs
2021/day24_1/: Cargo.toml
2021/day24_1/src/: alu.rs  alu2.rs  lib.rs  ula.rs
2021/day25_1/: Cargo.toml
2021/day25_1/src/: lib.rs
2021/day2_1/src/: lib.rs
2021/day2_2/src/: lib.rs
2021/day3_1/src/: lib.rs
2021/day3_2/src/: lib.rs
2021/day4_1/src/: board.rs  lib.rs
2021/day4_2/: Cargo.toml
2021/day4_2/src/: lib.rs
2021/day5_1/: Cargo.toml
2021/day5_1/src/: grid.rs  lib.rs
2021/day5_2/: Cargo.toml
2021/day5_2/src/: lib.rs
2021/day6_1/: Cargo.toml
2021/day6_1/src/: lib.rs
2021/day6_2/src/: lib.rs
2021/day7_1/: Cargo.toml
2021/day7_1/src/: lib.rs
2021/day7_2/: Cargo.toml
2021/day7_2/src/: lib.rs
2021/day8_1/src/: lib.rs
2021/day8_2/src/: lib.rs
2021/day9_1/: Cargo.toml
2021/day9_1/src/: lib.rs
2021/day9_2/: Cargo.toml
2021/day9_2/src/: graph.rs  lib.rs
2021/resources/tests/: day24-1-testdata1.txt  day24-1-testdata2.txt  day24-1-testdata3.txt  day24-1-testdata4.txt  day24-1-testdata5.txt  day24-1-testdata6.txt  day24-1-testdata7.txt  day24-1-testdata8.txt
2021/y2021/: Cargo.toml
2021/y2021/src/: main.rs
2022/: Cargo.toml
2022/day1/src/: lib.rs
2022/day2/src/: lib.rs  moves.rs  strategy_guide.rs
2022/day3/src/: lib.rs  rucksack.rs
2022/day4/src/: lib.rs
2022/day5/: Cargo.toml
2022/day5/src/: lib.rs  stacks.rs
2022/day6/: Cargo.toml
2022/day6/src/: lib.rs
2022/day8/src/: lib.rs
2022/y2022/: Cargo.toml
2022/y2022/src/: main.rs
2025/: Cargo.toml
2025/day1/src/: lib.rs
2025/day2/src/: lib.rs
2025/day3/src/: lib.rs
2025/day4/src/: lib.rs
2025/day5/src/: lib.rs
2025/day6/src/: lib.rs
2025/day7/src/: lib.rs
2025/day8/src/: circuits.rs  lib.rs  point_pairs.rs  points.rs
2025/day9/src/: lib.rs  shapes.rs
2025/y2025/: Cargo.toml
2025/y2025/src/: main.rs
