[workspace]

members = [
    "y2021",
    "day1_1",
    "day1_2",
    "day2_1",
    "day2_2",
    "day3_1",
    "day3_2",
    "day4_1",
    "day4_2",
    "day5_1",
    "day5_2",
    "day6_1",
    "day6_2",
    "day7_1",
    "day7_2",
    "day8_1",
    "day8_2",
    "day9_1",
    "day9_2",
    "day10_1",
    "day10_2",
    "day11_1",
    "day11_2",
    "day12_1",
    "day12_2",
    "day13_1",
    "day14_1",
    "day14_2",
    "day15_1",
    "day15_2",
    "day16_1",
    "day17_1",
    "day18_1",
    "day18_2",
    "day19_1",
    "day20_1",
    "day21_1",
    "day21_2",
    "day22_1",
    "day23_2",
    "day24_1",
    "day25_1",
]

default-members = ["y2021",]

