[package]
name = "y2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day1_1 = { path = "../day1_1" }
day1_2 = { path = "../day1_2" }
day2_1 = { path = "../day2_1" }
day2_2 = { path = "../day2_2" }
day3_1 = { path = "../day3_1" }
day3_2 = { path = "../day3_2" }
day4_1 = { path = "../day4_1" }
day4_2 = { path = "../day4_2" }
day5_1 = { path = "../day5_1" }