[package]
name = "y2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day1_1 = { path = "../day1_1" }
day1_2 = { path = "../day1_2" }
day2_1 = { path = "../day2_1" }
day2_2 = { path = "../day2_2" }
day3_1 = { path = "../day3_1" }
day3_2 = { path = "../day3_2" }
day4_1 = { path = "../day4_1" }
day4_2 = { path = "../day4_2" }
day5_1 = { path = "../day5_1" }
day5_2 = { path = "../day5_2" }
day6_1 = { path = "../day6_1" }
day6_2 = { path = "../day6_2" }
day7_1 = { path = "../day7_1" }
day7_2 = { path = "../day7_2" }
day8_1 = { path = "../day8_1" }
day8_2 = { path = "../day8_2" }
day9_1 = { path = "../day9_1" }
day9_2 = { path = "../day9_2" }
day10_1 = { path = "../day10_1" }
day10_2 = { path = "../day10_2" }
day11_1 = { path = "../day11_1" }