[package]
name = "y2025"
version = "0.1.0"
edition = "2024"

[dependencies]
day1 = { path = "../day1" }
day2 = { path = "../day2" }
day3 = { path = "../day3" }
day4 = { path = "../day4" }
day5 = { path = "../day5" }
day6 = { path = "../day6" }
day7 = { path = "../day7" }
day8 = { path = "../day8" }
day9 = { path = "../day9" }